[workspace]
members = ["derive", "generator", "main"]
resolver = "2"
package.readme = "./README.md"
package.version = "0.14.1"
package.repository = "https://github.com/theverydarkness/pest-typed"

[workspace.dependencies]
pest = { version = "2.7.9" }
pest_meta = { version = "2.7.9" }
pest_derive = { version = "2.7.9" }

[workspace.dependencies.pest_typed]
path = "./main"
version = "0.14.1"
default-features = false

[workspace.dependencies.pest_typed_generator]
path = "./generator"
version = "0.14.1"
default-features = false
