[workspace]
members = ["derive", "generator", "main"]
resolver = "2"
package.readme = "./README.md"
package.version = "0.19.1"
package.rust-version = "1.60.0"
package.repository = "https://github.com/theverydarkness/pest-typed"

[workspace.dependencies]
pest = { version = "2.7.10, <2.7.15" }
pest_meta = { version = "2.7.10, <2.7.15" }
pest_generator = { version = "2.7.10, <2.7.15" }
pest_derive = { version = "2.7.10, <2.7.15" }

rand = { version = "0.8.5", features = ["small_rng"] }
rand-utf8 = { version = "0.0.1" }

[workspace.dependencies.pest_typed]
path = "./main"
version = "0.19.1"
default-features = false

[workspace.dependencies.pest_typed_generator]
path = "./generator"
version = "0.19.1"
default-features = false

[workspace.dependencies.criterion]
version = "0.5.1"

[workspace.dependencies.anyhow]
version = "1.0"

[workspace.lints.clippy]
equatable_if_let = { level = "allow", priority = 1 }
option_if_let_else = { level = "allow", priority = 1 }
redundant_pub_crate = { level = "allow", priority = 1 }
incompatible_msrv = { level = "deny", priority = 1 }

nursery = { level = "warn" }
perf = { level = "deny" }
