[package]
name = "pest_typed_derive"
description = "pest-typed's derive macro."
version.workspace = true
edition = "2021"
documentation = "https://docs.rs/pest_typed_derive"
homepage = "https://github.com/theverydarkness/pest-typed"
readme.workspace = true
keywords = ["pest", "parser", "peg", "grammar"]
categories = ["parsing"]
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[features]
grammar-extras = ["pest_typed_generator/grammar-extras"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
pest_typed_generator.workspace = true

[dev-dependencies]
pest_typed.workspace = true
indoc = { version = "2.0" }
anyhow = { version = "1.0" }
