[package]
name = "pest_typed_derive"
description = "pest-typed's derive macro."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/pest_typed_derive"
repository.workspace = true
readme.workspace = true
keywords = ["pest", "parser", "peg", "grammar"]
categories = ["parsing"]
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[features]
grammar-extras = ["pest_typed_generator/grammar-extras", "pest_derive/grammar-extras"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
pest_typed_generator.workspace = true

[dev-dependencies]
pest_typed.workspace = true
indoc = { version = "2.0" }
criterion.workspace = true
anyhow.workspace = true
pest.workspace = true
pest_derive.workspace = true

[lints]
workspace = true

# Disabled as we can't finish these in an hour.
# [[bench]]
# name = "basic_benchmark"
# harness = false
# [[bench]]
# name = "profiling"
# harness = false

[[bench]]
name = "comparative"
harness = false
