[package]
name = "pest_typed_generator"
description = "Pest-typed's code generator."
version = "0.9.5"
edition = "2021"
documentation = "https://docs.rs/pest_typed_generator"
homepage = "https://github.com/theverydarkness/pest-typed"
keywords = ["pest", "generator"]
categories = ["parsing"]
license = "MIT/Apache-2.0"

[features]
grammar-extras = ["pest_meta/grammar-extras"]

[dependencies]
pest = { version = "2.7.3" }
proc-macro2 = { version = "^1.0.66" }
pest_meta = { version = "2.7.3" }
quote = { version = "^1.0.31" }
syn = { version = "^2.0.26", features = ["full"]}

[dev-dependencies]
pest_typed = { path = "../main", version = "0.9.5", default-features = false }
lazy_static = { version = "1.4.0" }
