[package]
name = "pest_typed_generator"
description = "Pest-typed's code generator."
version.workspace = true
edition = "2021"
documentation = "https://docs.rs/pest_typed_generator"
repository.workspace = true
readme.workspace = true
keywords = ["pest", "generator"]
categories = ["parsing"]
license = "MIT/Apache-2.0"

[features]
grammar-extras = ["pest_meta/grammar-extras"]

[dependencies]
pest.workspace = true
pest_meta.workspace = true
proc-macro2 = { version = "^1.0.66" }
quote = { version = "^1.0.31" }
syn = { version = "^2.0.26", features = ["full"] }

[dev-dependencies]
pest_typed.workspace = true
criterion.workspace = true
lazy_static = { version = "1.4.0" }
anyhow.workspace = true

[[bench]]
name = "graph"
harness = false
