[package]
name = "pest_typed"
description = "A statically typed version of pest."
version = "0.10.4"
edition = "2021"
documentation = "https://docs.rs/pest_typed"
homepage = "https://github.com/theverydarkness/pest-typed"
readme.workspace = true
keywords = ["pest", "parser", "peg", "grammar"]
categories = ["parsing"]
license = "MIT/Apache-2.0"

[features]
default = ["std"]
std = ["pest/std"]

[dependencies]
pest.workspace = true
custom_debug_derive = { version = "0.5.1" }
