[package]
name = "pest_typed"
description = "A statically typed version of pest."
version.workspace = true
edition = "2021"
documentation = "https://docs.rs/pest_typed"
repository.workspace = true
readme.workspace = true
keywords = ["pest", "parser", "peg", "grammar"]
categories = ["parsing"]
license = "MIT/Apache-2.0"

[features]
default = ["std"]
std = ["pest/std"]

[dependencies]
pest.workspace = true
custom_debug_derive = { version = "0.5.1" }
unicode-width = { version = "0.1.13" }
cmp_by_derive = { version = "0.1.0" }
