[package]
name = "pest_typed"
description = "A statically typed version of pest."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/pest_typed"
repository.workspace = true
readme.workspace = true
keywords = ["pest", "parser", "peg", "grammar"]
categories = ["parsing"]
license = "MIT/Apache-2.0"

[features]
default = ["std"]
std = ["pest/std"]
serde = ["dep:serde"]
shared-string = ["dep:shared-string"]
shared-vec = ["dep:shared-vec"]

[dependencies]
pest.workspace = true
custom_debug_derive = { version = "0.6.2" }
unicode-width = { version = "0.1.13" }
cmp_by_derive = { version = "0.1.0" }
serde = { version = "1.0", optional = true, features = ["derive"] }
derive-where = "1.4.0"
shared-string = { version = "0.1.7", optional = true }
shared-vec = { version = "0.1.0", optional = true }

[dev-dependencies]
rand.workspace = true
rand-utf8.workspace = true

[lints]
workspace = true
